# pointcloud-clustering

./: .gitattributes  .gitignore  README.md  cleanbox.xyz  cleanboxfacets.off  read_off.m  visualizeCloud.cpp
cloud_stitching/: CMakeLists.txt  includes.h  parameters.txt  reg2.cpp  registration.cpp
cross-section-estimation/: estimate-normals.cpp  includes.h  normals_computation_example.cpp  parameters.txt  test.cpp
data/2d_cluster_test/: blob.xyz  interiorcircles.xyz  lines.xyz  plane.xyz  solid_circles.xyz
data/moveAngledTest/segments/concat1-100step5filtk50std1downsampled0.01/: 1.xyz  2.xyz  (+1 more)
data/moveHighTest/concatenated/: concat1-2step1filtk100std0.8
data/moveTestsCombined/: 0.xyz
data/simulated/: cleansimdata.xyz  emptybox.xyz  heftybeam.xyz  highreslblock.xyz  highreslblock10pnoise.xyz  lloydOptimizationSample.xyz  randomset0noise.xyz
data/simulated/fake-beam-scans/: simulated-beam-2cmnoise.xyz
dlibclustering/: cluster.cpp  parameters.txt
full_stack/: fullstack.cpp  parameterfile.txt
includes/: clustering.h  dlib_clustering.h  io.h  test.cpp
includes/IO/: pcltocgal.h
matlab/: get_quality.m  read_off.m
meshing/: hole_repair.cpp  includes.h  parameters.txt  poisson_reconstruction.cpp  surface_reconstruction.cpp
segmentation/: CMakeLists.txt  good_segment.txt  includes.h  planeseg.txt  segmentation.cpp  simseg.txt
stuff2takehome/: collisiondetect.m  hdl32epointcloudmaker.m  simulated-beam-0noise (1).xyz
unsupervised/: clustertest.asv  clustertest.m
unsupervised/functions/: DBSCAN.m  buildshape.m  getstats.asv  getstats.m  lasdata.m
(+48 files in other folders)
