cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(pcd_registration)
set(PCL_DIR "/usr/local/Cellar/pcl/1.8.1_2/share/pcl-1.8")
find_package(PCL 1.8 REQUIRED COMPONENTS common io)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(pcd_registration reg2.cpp)
target_link_libraries(pcd_registration ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES} -lpcl_filters -lpcl_search -lpcl_features -lpcl_visualization)